# Nextplace

./: .gitignore  README.md  auto_update.py  clear_pm2_logs.sh  get_table_info.py  min_compute.yml  print_logs.sh  requirements.txt  setup.cfg
data/: extract_scored_predictions.py
docs/stream_tutorial/: miner.py
neurons/: miner.py  validator.py
neurons/models/: CustomModel.py
nextplace/: __init__.py  protocol.py
nextplace/miner/: README.md  real_estate_miner.py  request_logger.py
nextplace/miner/database/: database_manager.py
nextplace/miner/ml/: model.py  model_loader.py  utils.py
nextplace/miner/training_data/: download_data.py  get_photos.py
nextplace/miner/watchdog/: watchdog.py
nextplace/validator/: README.md  TopMinerPreds.py  nextplace_validator.py
nextplace/validator/api/: api_base.py  properties_api.py  sold_homes_api.py
nextplace/validator/data_containers/: home.py
nextplace/validator/database/: database_manager.py  table_initializer.py
nextplace/validator/market/: market_manager.py  markets.py
nextplace/validator/miner_manager/: MinerManager.py  miner_manager.py
nextplace/validator/outgoing_data/: synapse_manager.py  website_comms.py
nextplace/validator/predictions/: prediction_manager.py
nextplace/validator/scoring/: scoring.py  scoring_calculator.py  time_gated_scorer.py
nextplace/validator/setting_weights/: weights.py
nextplace/validator/synapse/: synapse_manager.py
template/base/: miner.py  neuron.py
tests/: test_scores.py  test_time_gated_scoring.py  test_version.py  test_weights.py
(+10 files in other folders)
