[metadata]
name = nextplace
version = 1.1.0
database_version = 1.0.0
reset_validator_scores = False
author = estatecat, nextplacelynx, fivedollarwitch
organization = Nickel5
author_email = test@email.com
description = Subnet 48, Nextplace
long_description = file: README.md
long_description_content_type = text/markdown